--- a/src/mail/templates/register.hbs
+++ b/src/mail/templates/register.hbs
@@ -71,13 +71,13 @@
 
 <body>
   <div class="header">
-    <h1>Welcome to Grocery Store Groceries!</h1>
+    <h1>Welcome to Grocery Store!</h1>
   </div>
 
   <div class="content">
     <p>Hello <span class="highlight">{{firstName}}</span>,</p>
 
-    <p>We're thrilled to welcome you to Grocery Store Groceries! Your account was successfully created on <span
+    <p>We're thrilled to welcome you to Grocery Store! Your account was successfully created on <span
         class="highlight">{{joinedAt}}</span>.</p>
 
     <p>At Grocery Store, we're committed to bringing you the freshest produce and highest quality groceries delivered
